--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
       }
     ]
   },
+  "activationEvents": ["onStartupFinished"],
   "scripts": {
     "vscode:prepublish": "npm run package",
     "compile": "webpack",
